finish basic css, add file json for fetch

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
             terms = "Consulta los términos y condiciones. El mes gratis no está disponible para quienes ya hayan probado Premium."
         ></plan-card>
         <plan-card 
-            title = "Individual"
+            title = "Estudiantes"
             price = "4.99"
             account = "1 cuenta"
             benefits = "Descuento especial para universitarios que cumplan los requisitos. Escucha tu música favorita sin anuncios. Escucha música donde quieras, incluso sin conexión. Reproducción a la carta"
