try to pump data from array. create an other component

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <title>Live Plan</title>
 </head>
 <body>
@@ -17,8 +17,8 @@
     </header>
 
     <main class="main">
-       <ul class="plans-list">
-        <plan-card 
+       <ul class="plans-list js-plans-list">
+       <plan-card 
             title = "Individual"
             price = "9.99"
             account = "1 cuenta"
@@ -48,8 +48,7 @@
         ></plan-card>
        </ul>
     </main>
-    
-    <script type="module" src="../js/main.js"></script> 
+    <script type="module" src="./assets/js/main.js"></script>
 </body>
 </html>
 
